# sourcetax

./: .gitignore  Makefile  README.md  app_review.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  dataset_manifest.json  store.db
data/combined_dataset/: README.md  combined_samples.jsonl
data/gold/: README.md  gold_transactions.jsonl
data/mappings/: external_category_to_sourcetax_v1.json  mcc_to_sourcetax_v1.json  merchant_aliases.json  merchant_category.csv
data/ml/: baseline_pipeline.pkl  ml_test.csv  ml_train.csv  ml_val.csv  split_metadata.txt
data/samples/: CORD_README.md  PLAID_SAMPLE.json  SROIE_README.md  bank_bofa.csv  bank_chase.csv  bank_sample.csv  plaid_sample_small.json  quickbooks_sample.csv  receipt_sample.txt  toast_accounting.csv  toast_accounting_real_sample.csv  toast_menu.json  (+1 more)
docs/: dataset_sources_guide.md  labeling_guidelines_v1.md  phase0_summary.md  phase2_plan.md  phase3_completion.md  product_strategy_and_roadmap.md  project_progress_2026-03.md  sample_data_sources.md
outputs/: quickbooks_import.csv  schedule_c_totals.csv
scripts/: smoke.sh
tests/: conftest.py  test_core.py  test_data_foundation.py  test_external_data_tools.py  test_gapfill_coverage_report.py  test_generate_pairs.py  test_generate_synthetic_gapfill.py  test_gold_enforcement.py  test_import_loaders.py  test_merchant_norm_noise.py  test_phase3_integration.py  test_phase4_exports.py  test_taxonomy_enforcement.py  test_training_rows_builder.py
tools/: __init__.py  backfill_shadow_logs.py  build_dataset_manifest.py  build_mitulshah_corpus.py  build_staging_enriched.py  build_training_rows_from_staging.py  canonicalize_gold.py  compare_rules_ml_hybrid.py  convert_funsd_to_combined.py  count_combined.py  eval.py  eval_error_breakdown.py  eval_hybrid_on_gold.py  eval_mitul_robustness.py  eval_transfer.py  export_label_batch.py  export_label_batch_002.py  export_label_batch_003.py  export_label_batch_004.py  export_label_batch_006_sparse.py  export_label_batch_007_source_balance.py  export_shadow_review_flags.py  fetch_public_datasets.py  gapfill_coverage_report.py  generate_pairs.py  generate_reports.py  generate_splits.py  generate_synthetic_gapfill.py  generate_training_samples.py  gold_balance_report.py  hybrid_cv.py  hybrid_prod_candidate_report.py  import_dc_pcard.py  import_hf_mitulshah.py  import_receipts_sroie.py  labeling_ui.py  locked_holdout_eval.py  locked_holdout_policy_sweep.py  merge_labeled.py  model_comparison.py  (+11 more)
(+187 files in other folders)
