[project]
name = "sourcetax"
version = "0.2.0"
description = "SourceTax - transaction classification and receipt linking for tax prep"
authors = [{name = "SourceTax Contributors"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "python-multipart>=0.0.5",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.0",
    "streamlit>=1.28.0",
    "difflib-python>=1.0.0",
]

[project.optional-dependencies]
ocr-easyocr = ["easyocr>=1.6.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
