[project]
name = "sourcetax"
version = "0.2.0"
description = "SourceTax - transaction classification and receipt linking for tax prep"
authors = [{name = "SourceTax Contributors"}]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0.0",
    "pytesseract>=0.3.0",
    "streamlit>=1.28.0",
    "easyocr>=1.6.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
matching = ["rapidfuzz>=2.0.0"]
ml = ["scikit-learn>=1.0.0", "pandas>=1.3.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
